fix: correct HTML errors to pass CI

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head><title></title></head>
-<body><p>Hola {usuario}</p></body>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hola Miriam</title>
+</head>
+<body>
+  <p>Hola miriamicai</p>
+</body>
 </html>
